; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/host/extr_ohci-mem.c_ohci_hcd_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/host/extr_ohci-mem.c_ohci_hcd_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ohci_hcd = type { i32, i32, i32, i32 }

@jiffies = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ohci_hcd*)* @ohci_hcd_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ohci_hcd_init(%struct.ohci_hcd* %0) #0 {
  %2 = alloca %struct.ohci_hcd*, align 8
  store %struct.ohci_hcd* %0, %struct.ohci_hcd** %2, align 8
  %3 = load i32, i32* @jiffies, align 4
  %4 = load %struct.ohci_hcd*, %struct.ohci_hcd** %2, align 8
  %5 = getelementptr inbounds %struct.ohci_hcd, %struct.ohci_hcd* %4, i32 0, i32 3
  store i32 %3, i32* %5, align 4
  %6 = load %struct.ohci_hcd*, %struct.ohci_hcd** %2, align 8
  %7 = getelementptr inbounds %struct.ohci_hcd, %struct.ohci_hcd* %6, i32 0, i32 2
  %8 = call i32 @spin_lock_init(i32* %7)
  %9 = load %struct.ohci_hcd*, %struct.ohci_hcd** %2, align 8
  %10 = getelementptr inbounds %struct.ohci_hcd, %struct.ohci_hcd* %9, i32 0, i32 1
  %11 = call i32 @INIT_LIST_HEAD(i32* %10)
  %12 = load %struct.ohci_hcd*, %struct.ohci_hcd** %2, align 8
  %13 = getelementptr inbounds %struct.ohci_hcd, %struct.ohci_hcd* %12, i32 0, i32 0
  %14 = call i32 @INIT_LIST_HEAD(i32* %13)
  ret void
}

declare dso_local i32 @spin_lock_init(i32*) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
